# ustc_course_plus

./: README.md
codia_cracker/: codia_cracker.cpp  readme.md
大学物理基础实验/: readme.md
大学物理基础实验/IYPT/: code.py  code2.py  curve.py  draw.py
大学物理基础实验/分光计B/: report.aux  report.tex
大学物理基础实验/匀加速运动与碰撞/: regression.py  数据处理补充.docx
大学物理基础实验/声速的测量/: regression.py  report.aux  report.tex
大学物理基础实验/整流滤波/: code.py  report.aux  report.tex
大学物理基础实验/硅光电池/: code.py  curve.py  draw.py  print.docx
大学物理基础实验/重力加速度的测量/: t.aux  t.tex
形式化方法导引/: readme.md
操作系统原理与设计(H)/: readme.md
操作系统原理与设计(H)/lab1/: README.md
操作系统原理与设计(H)/lab2/: README.md
操作系统原理与设计(H)/lab3/: 1.c  2.cpp  3.cpp  README.md
数据结构/: readme.md
数据结构/多项式/: poly.cpp  多项式.sln  多项式.vcxproj  多项式.vcxproj.filters
数理方程B/: readme.md
数理逻辑基础/: readme.md
概率论与数理统计/: readme.md
模拟与数字电路/: 2021秋数字电路期中考试回忆版.docx  2021秋数字电路期中考试答案.docx  readme.md
模拟与数字电路实验/: readme.md
毛泽东思想和中国特色社会主义理论体系概论/: readme.md  毛概期末试卷考场抄写版.docx
电磁学C/: README.md
程序设计1ppt/: readme.md
程序设计2上机作业/: readme.md  一教的教室.cpp  全排列计数.cpp  全排列输出.cpp  函数：统计字符串出现次数.cpp  吃金币(by 0188).cpp  吃金币(by 1614).c  浮点数幂.cpp  逆逆波兰式.cpp  通过oj题目的最大概率.cpp
网络系统实验/: pre.pptx  readme.md
计算机系统概论/: readme.md  往年期中试题.docx  讨论课报告.pptx
计算机系统概论/课程git仓库(含其他实验报告)/labS/simulator/: CMakeLists.txt
计算机系统概论/课程git仓库(含其他实验报告)/labS/simulator/include/: register.h
计算机系统概论/课程git仓库(含其他实验报告)/labS/simulator/src/: register.cpp
计算机组成原理(H)/: readme.md
计算机网络/: 期中考试题目.docx  计网期中大抄.docx
运筹学基础/: readme.md
马克思主义基本原理/: manually_process.py  process.py  readme.md  rename.py
(+466 files in other folders)
